# yolov8-onnx-cpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
